Updatrd mavenbuild ci pipeline to handle provision and destroy